🎉 Complete Clubzila Authentication System Implementation
✅ Real Clubzila Integration with web form endpoints
✅ Immediate user activation (no OTP required)
✅ Beautiful authentication frontend with TailwindCSS
✅ Session management with localStorage
✅ CSRF token handling for secure form submission
✅ Proper error handling and logging
✅ Backward compatibility with legacy OTP endpoints

Key Features:
- Phone number authentication
- Automatic user registration
- Immediate activation in Clubzila
- Modern responsive UI
- Secure session management

--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ DATABASE_URL=your_database_url_here
 
 # Security
 JWT_SECRET=your_jwt_secret_here
-NODE_ENV=development
+NODE_ENV=production
 
 # Clubzila Configuration
-CLUBZILA_API_URL=https://clubzila.com/api
+CLUBZILA_API_URL=https://clubzila.com
 CLUBZILA_API_KEY=your_clubzila_api_key_here
 CLUBZILA_WEBHOOK_SECRET=your_clubzila_webhook_secret_here
 CLUBZILA_TIMEOUT=30000
